# MSC_heiarchy_demo

./: CMakeLists.txt  README.md
bs/: CMakeLists.txt
bs/src/: bs.c
mn/: CMakeLists.txt
mn/src/: mn.c
msc/: CMakeLists.txt
msc/src/: msc.c
shared/: CMakeLists.txt  tcp_ip_helpers.h
shared/inc/: client.h  msc_model.h
shared/src/: client.c
